--- a/public/index.html
+++ b/public/index.html
@@ -286,7 +286,7 @@
             });
 
             document.querySelector('#finish-section h1').innerText = "תודה רבה";
-            document.getElementById('summary-result').innerHTML = `התשובות וקורות החיים נקלטו בהצלחה.<br><br>נחזור אליך בהקדם.`;
+            document.getElementById('summary-result').innerHTML = `התשובות וקורות החיים נקלטו בהצלחה.<br><br>במידה ונראה התאמה לתפקיד,<br>נחזור אליך בהקדם להמשך התהליך.`;
         }
         
         document.getElementById("answer-box").addEventListener("keyup", function(event) { if (event.key === "Enter") nextQuestion(); });
