--- a/admin.html
+++ b/admin.html
@@ -499,7 +499,7 @@
                         <td style="text-align:center;"><span class="tag tag-score ${scoreClass}">${score}</span></td>
                         <td style="font-size:13px; color:#666;">${recDisplay}</td>
                         <td>
-                            <button class="action-btn" onclick="openModal(${index})"><span class="action-icon">👁️</span> פרטים</button>
+                            <button class="action-btn" onclick="openModal(${index})"><span class="action-icon">🔎</span> פרטים</button>
                         </td>
                     `;
                     tbody.appendChild(tr);
